[gd_scene load_steps=4 format=3 uid="uid://bhj1oq2rnkdlc"]

[ext_resource type="Script" uid="uid://dkpv8l7rsjk2n" path="res://scenes/ui/HUD.gd" id="1_7k4pc"]
[ext_resource type="Script" uid="uid://bq0eo3t8lmiuu" path="res://scenes/ui/EnemyRadar.gd" id="2_radar"]
[ext_resource type="Script" uid="uid://b4fessnjbfgup" path="res://scenes/ui/KeybindingsDisplay.gd" id="3_keybindings"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7k4pc")

[node name="FPSLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = -60.0
grow_vertical = 0
text = "FPS: 60"

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0
show_percentage = false

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -65.0
offset_right = 50.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 0
text = "Level: 1"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -10.0
grow_vertical = 0

[node name="XPBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
max_value = 30.0
show_percentage = false

[node name="EnemyRadar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -170.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 170.0
grow_horizontal = 0
script = ExtResource("2_radar")

[node name="KeybindingsDisplay" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -170.0
offset_top = 270.0
offset_right = -20.0
offset_bottom = 410.0
grow_horizontal = 0
script = ExtResource("3_keybindings")

[node name="VBoxContainer" type="VBoxContainer" parent="KeybindingsDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
